force-app/main/default/objects/Partner_Invoice__c/Partner_Invoice__c.object-meta.xml
<CustomObject>
    <label>Partner Invoice</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Partner Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>