force-app/main/default/objects/Partner_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Invoices</relationshipLabel>
    <relationshipName>Partner_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>