force-app/main/default/objects/Partner_Invoice__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>RebateProgramMember</referenceTo>
    <relationshipLabel>Partner Invoices</relationshipLabel>
    <relationshipName>Partner_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>