force-app/main/default/objects/Partner_Invoice__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Partner Invoices</relationshipLabel>
    <relationshipName>Partner_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>