force-app/main/default/objects/Partner_Invoice__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <referenceTo>ProductCategory</referenceTo>
    <relationshipLabel>Partner Invoices</relationshipLabel>
    <relationshipName>Partner_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>