force-app/main/default/objects/Partner_Invoice__c/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship-To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Invoices (Ship-To Account)</relationshipLabel>
    <relationshipName>Partner_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>